--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "morgan": "^1.10.1",
     "multer": "^2.0.2"
   },
